# NOIR-Server

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  db.sqlite3  local.env  manage.py  pyproject.toml  requirement.txt  requirements.txt
apps/api/: apis.py  serializers.py  urls.py  viewsets.py
apps/dashboard/: forms.py  models.py  serializers.py  urls.py  views.py
apps/dashboard/migrations/: 0001_initial.py
apps/dashboard/tests/: test_view.py
my_project/: settings.py  urls.py
noir/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
noir/migrations/: 0001_initial.py  0002_profile.py
noir_server/: settings.py  urls.py  wsgi.py
static/: base.css  cover.css  dashboard.css  ds2.css  form.css  signin.css  signup.css  teste.css
static/css/: main.css
templates/: base.html  dashboard.html  graficos.html  home.html  measuring_form.html  setup.html  signup.html  teste.html
templates/registration/: login.html  teste.html
